--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+nala (0.3.0) unstable; urgency=medium
+
+  * Replaced aria2 with internal downloader
+  * Improved the show command's output
+  * Improved `--raw-dpkg` by forking normally instead of pty
+  * Distinguish Remove and Auto-Remove packages
+  * Add `--no-autoremove` switch
+  * Add dpkg progress bar
+  * Add support for readline environment variable
+  * Apt no longer redownloads packages with an epoch.
+
+ -- Blake Lee <blake@volian.org>  Sat, 22 Jan 2022 15:56:25 -0500
+
 nala (0.2.1) unstable; urgency=medium
 
   * Critical bug fix. `nala clean` attempts to remove files
