--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,25 @@
+nala (0.5.0) unstable; urgency=medium
+
+  [ Changes ]
+  * Change `--noninteractive` switch to `--non-interactive`
+  * Add `search` subcommand
+  * Add `--fix-broken` and `--no-fix-broken` switches
+  * Add fish completion
+  * Add `--no-install-recommends` and `--install-suggests`
+  * Nala now shows Recommended or Suggested packages when they
+    aren't due to be installed.
+  * Change bash-completion to be compatible with zsh
+
+  [ Bug Fixes ]
+  * `fetch` setting release to sid if it's unable to determine release
+  * Unable to install local `.deb` that doesn't have dependencies
+  * Nala checking `priority: required` instead of essential
+  * Nala not showing packages kept back during an upgrade
+  * Nala sometimes not notifying that a reboot is required
+  * Install hangs when non-interactive due to `need-restart` bug
+
+ -- Blake Lee <blake@volian.org>  Mon, 21 Feb 2022 18:41:44 -0500
+
 nala (0.4.2) unstable; urgency=medium
 
   [ Bug Fixes ]
