--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+nala (0.5.1) unstable; urgency=medium
+
+  [ Bug Fixes ]
+  * Can't install packages that have virtual packages in suggests
+  * No error handling for `search` regex compliation errors
+  * Exception throw in `search` on packages without a description
+  * No argument checking for `search`
+  * Bash-completion not showing `search` switches
+
+ -- Blake Lee <blake@volian.org>  Tue, 22 Feb 2022 11:45:03 -0500
+
 nala (0.5.0) unstable; urgency=medium
 
   [ Changes ]
