--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,18 @@
+nala (0.5.2) unstable; urgency=medium
+
+  [ Bug Fixes ]
+  * Nala won't allow package downgrades when installing local `.deb`
+  * New and Old version numbers switched in upgrade summary
+  * Some post install notices not showing the full message
+  * dpkg progress bar sometimes going over the total
+  * Nala not writing to `/var/log/nala/term.log`
+  * Many fixes related to ascii compatibility mode
+  * Not being able to install from repo with pip
+  * `history` opening cache when it doesn't need to
+  * Optimize `search` command and transaction summary
+
+ -- Blake Lee <blake@volian.org>  Wed, 23 Feb 2022 15:47:15 -0500
+
 nala (0.5.1) unstable; urgency=medium
 
   [ Bug Fixes ]
