--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+nala (0.8.1) unstable; urgency=medium
+
+  [ Bug Fixes ]
+  * KeyError exception when installing local `.deb` files
+  * Packages that can be autoremoved not showing in the transaction
+    summary when they won't be removed.
+
+ -- Blake Lee <blake@volian.org>  Sun, 24 Apr 2022 20:44:14 -0400
+
 nala (0.8.0) unstable; urgency=medium
 
   [ Changes ]
